@@ -1,3 +1,8 @@
+Fri Jul 19 12:35:41 2013  Tanaka Akira  <akr@fsij.org>
+
+	* test/socket/test_tcp.rb (test_initialize_failure): Use EADDRNOTAVAIL
+	  to test an error message generated by bind() failure.
+
 Fri Jul 19 11:27:38 2013  Zachary Scott  <e@zzak.io>
 
 	* lib/racc/parser.rb: [DOC] Capitalize "Ruby" in documentation
